--- a/backend/foundry.toml
+++ b/backend/foundry.toml
@@ -4,5 +4,8 @@ out = 'out'
 libs = ['node_modules', 'lib']
 test = 'test/foundry'
 cache_path = 'forge-cache'
+gas_reports = ["*"]
+optimizer = true
+optimizer_runs = 20000
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
