deployed on goerli

--- a/frontend/constants/networkMapping.json
+++ b/frontend/constants/networkMapping.json
@@ -1,1 +1,16 @@
-{"31337":{"WBTC":["0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512"],"WETH":["0x9fE46736679d2D9a65F0992F2272dE9f3c7fa6e0"],"DAI":["0xCf7Ed3AccA5a467e9e704C703E8D87F634fB0Fc9"],"USDC":["0xDc64a140Aa3E981100a9becA4E685f962f0cF6C9"],"P2P":["0x5FbDB2315678afecb367f032d93F642f64180aa3"]}}
+{
+    "5": {
+        "WBTC": ["0x0428ed4EaeB8570a363d0e6DeE1379f09ddc4296"],
+        "WETH": ["0x2F279c643a9b6A3c234d92B153Fc7d23237996f7"],
+        "DAI": ["0x7aED33d0B7D77a13DfD6B064c67B505898BFb6DA"],
+        "USDC": ["0x89D715D71020043cd25617658b13931272cFCf34"],
+        "P2P": ["0x3220B186031C99DDbe9c42eA29D96486D2164573"]
+    },
+    "31337": {
+        "WBTC": ["0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512"],
+        "WETH": ["0x9fE46736679d2D9a65F0992F2272dE9f3c7fa6e0"],
+        "DAI": ["0xCf7Ed3AccA5a467e9e704C703E8D87F634fB0Fc9"],
+        "USDC": ["0xDc64a140Aa3E981100a9becA4E685f962f0cF6C9"],
+        "P2P": ["0x5FbDB2315678afecb367f032d93F642f64180aa3"]
+    }
+}
