--- a/graph/subgraph.yaml
+++ b/graph/subgraph.yaml
@@ -6,8 +6,9 @@ dataSources:
     name: P2P
     network: goerli
     source:
-      address: "0x3220B186031C99DDbe9c42eA29D96486D2164573"
+      address: '0x3220B186031C99DDbe9c42eA29D96486D2164573'
       abi: P2P
+      startBlock: 7871075
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
