--- a/frontend/constants/networkMapping.json
+++ b/frontend/constants/networkMapping.json
@@ -12,5 +12,12 @@
         "DAI": ["0xCf7Ed3AccA5a467e9e704C703E8D87F634fB0Fc9"],
         "USDC": ["0xDc64a140Aa3E981100a9becA4E685f962f0cF6C9"],
         "P2P": ["0x5FbDB2315678afecb367f032d93F642f64180aa3"]
+    },
+    "80001": {
+        "WBTC": ["0x83Ef57656CD23BC310A81D29A54b3b5feed53F82"],
+        "WETH": ["0x5Ee82f03c1bc72127917c1c16be538D033BaB2dC"],
+        "DAI": ["0x1677C435179b1bc0cF303C9E3b61f392e8011f6e"],
+        "USDC": ["0x1FD398520F6AC9D68a76b2Ce58D51737d2b97BD0"],
+        "P2P": ["0x1dbab3b2ff5C475B31396289B4aD3c7646E6849F"]
     }
 }
