--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,11 @@
         "format": "prettier --write ."
     },
     "dependencies": {
+        "@apollo/client": "^3.7.1",
         "@web3uikit/core": "^0.1.4",
         "@web3uikit/icons": "^0.1.4",
         "@web3uikit/web3": "^0.1.4",
+        "graphql": "^16.6.0",
         "next": "12.2.4",
         "react": "18.2.0",
         "react-dom": "18.2.0"
