--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -12,8 +12,10 @@
         "moduleResolution": "node",
         "resolveJsonModule": true,
         "isolatedModules": true,
+        "suppressImplicitAnyIndexErrors": true,
         "jsx": "preserve",
-        "incremental": true
+        "incremental": true,
+        "sourceMap": true
     },
     "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "components/AddLiquidityModal.jsx"],
     "exclude": ["node_modules"]
