--- a/graph/package.json
+++ b/graph/package.json
@@ -4,17 +4,15 @@
   "scripts": {
     "codegen": "graph codegen",
     "build": "graph build",
-    "deploy": "graph deploy --node https://api.studio.thegraph.com/deploy/ p2p",
-    "create-local": "graph create --node http://localhost:8020/ p2p",
-    "remove-local": "graph remove --node http://localhost:8020/ p2p",
-    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 p2p",
+    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ harendra-shakya/p2p",
+    "create-local": "graph create --node http://localhost:8020/ harendra-shakya/p2p",
+    "remove-local": "graph remove --node http://localhost:8020/ harendra-shakya/p2p",
+    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 harendra-shakya/p2p",
     "test": "graph test"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "0.35.0",
-    "@graphprotocol/graph-ts": "^0.28.1"
+    "@graphprotocol/graph-ts": "0.28.1"
   },
-  "devDependencies": {
-    "matchstick-as": "0.5.0"
-  }
+  "devDependencies": { "matchstick-as": "0.5.0" }
 }
