--- a/frontend/constants/networkMapping.json
+++ b/frontend/constants/networkMapping.json
@@ -18,6 +18,7 @@
         "WETH": ["0x5Ee82f03c1bc72127917c1c16be538D033BaB2dC"],
         "DAI": ["0x1677C435179b1bc0cF303C9E3b61f392e8011f6e"],
         "USDC": ["0x1FD398520F6AC9D68a76b2Ce58D51737d2b97BD0"],
-        "P2P": ["0x1dbab3b2ff5C475B31396289B4aD3c7646E6849F"]
+        "P2P": ["0x1dbab3b2ff5C475B31396289B4aD3c7646E6849F"],
+        "Linkit": ["0x2cDf04A53D787F8F73C2d01856020EebF66E610e"]
     }
 }
