--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
         "@web3uikit/icons": "^0.1.4",
         "@web3uikit/web3": "^0.1.4",
         "graphql": "^16.6.0",
+        "magic-sdk": "^10.0.0",
         "next": "12.2.4",
         "react": "18.2.0",
         "react-dom": "18.2.0"
