--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
         "magic-sdk": "^10.0.0",
         "next": "12.2.4",
         "react": "18.2.0",
-        "react-dom": "18.2.0"
+        "react-dom": "18.2.0",
+        "web3.storage": "^4.4.0"
     },
     "devDependencies": {
         "@types/node": "18.6.5",
