--- a/backend/package.json
+++ b/backend/package.json
@@ -13,34 +13,33 @@
     },
     "license": "MIT",
     "devDependencies": {
-        "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.10",
-        "@nomiclabs/hardhat-etherscan": "^3.0.0",
-        "@nomiclabs/hardhat-waffle": "^2.0.1",
-        "@typechain/ethers-v5": "^9.0.0",
-        "@typechain/hardhat": "^4.0.0",
-        "@types/chai": "^4.3.0",
+        "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
+        "@nomiclabs/hardhat-etherscan": "^3.1.3",
+        "@nomiclabs/hardhat-waffle": "^2.0.3",
+        "@typechain/ethers-v5": "^10.2.0",
+        "@typechain/hardhat": "^6.1.5",
+        "@types/chai": "^4.3.4",
         "@types/mocha": "^9.1.0",
-        "chai": "^4.3.4",
-        "ethereum-waffle": "^3.4.0",
-        "ethers": "^5.5.1",
+        "@types/node": "^18.11.17",
+        "chai": "^4.3.7",
+        "ethereum-waffle": "^3.4.4",
+        "ethers": "^5.7.2",
         "fs": "^0.0.1-security",
-        "hardhat": "^2.9.0",
-        "hardhat-contract-sizer": "^2.4.0",
-        "hardhat-deploy": "^0.9.29",
-        "hardhat-gas-reporter": "^1.0.7",
-        "prettier": "^2.4.1",
-        "prettier-plugin-solidity": "^1.0.0-beta.19",
-        "solhint": "^3.3.6",
-        "solidity-coverage": "^0.7.17",
-        "ts-node": "^10.4.0",
-        "typechain": "^7.0.0",
-        "typescript": "^4.5.4"
+        "hardhat": "^2.12.4",
+        "hardhat-contract-sizer": "^2.6.1",
+        "hardhat-deploy": "^0.11.22",
+        "hardhat-gas-reporter": "^1.0.9",
+        "prettier": "^2.8.1",
+        "prettier-plugin-solidity": "^1.1.0",
+        "solhint": "^3.3.7",
+        "solidity-coverage": "^0.8.2",
+        "ts-node": "^10.9.1",
+        "typechain": "^8.1.1",
+        "typescript": "^4.9.4"
     },
     "dependencies": {
-        "@chainlink/contracts": "^0.4.1",
         "@openzeppelin/contracts": "^4.7.3",
-        "erc721a": "^4.2.2",
-        "dotenv": "^10.0.0"
+        "dotenv": "^16.0.3"
     },
     "mocha": {
         "timeout": 10000000
